--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <script src="js/b_visual.js"></script>
     <script src="js/c_best.js"></script>
     <script src="js/d_new.js"></script>
-    <script src="js/e_new.js"></script>
     <script src="js/f_review.js"></script>
     <script src="js/g_event.js"></script>
     <script src="js/h_service.js"></script>
@@ -656,14 +655,14 @@
             </div>
           </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-prev swiper1-prev"></div>
+        <div class="swiper-button-next swiper1-next"></div>
       </section>
       <!-- d_new -->
       <section class="new">
         <div class="wrap-inner">
           <h2>지금 주목할 신제품</h2>
-          <div class="swiper bestSwiper">
+          <div class="swiper newSwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="new-prd-box">
@@ -879,10 +878,195 @@
             </div>
           </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-prev swiper2-prev"></div>
+        <div class="swiper-button-next swiper2-next"></div>
       </section>
       <!-- e_pick -->
+      <section class="pick">
+        <div class="wrap-inner">
+          <h2>에디터 PICK!</h2>
+          <div class="pick-btn">
+            <button class="fresh">프레쉬4</button>
+            <button class="care">보습케어</button>
+          </div>
+          <div class="pick-box-fresh">
+            <div class="pick-banner">
+              <div class="pick-img">
+                <img src="images/jisu/pick/1.프레쉬.jpg" alt="프레쉬4" />
+              </div>
+              <p class="pick-txt">
+                장바구니를 신선함으로 <br />
+                가득 채우고 싶다면
+              </p>
+            </div>
+            <div class="pick-products">
+              <div class="pick-prd-top">
+                <div class="prd-box1">
+                  <div class="prd-box1-left">
+                    <div class="thumbnail">
+                      <a href="#">
+                        <img src="images/jisu/pick/1.프레쉬-제품1(터메릭).png" alt="터메릭" />
+                      </a>
+                    </div>
+                    <div class="description">
+                      <a href="#">
+                        <p class="prd-name">터메릭</p>
+                        <p class="prd-category">프레쉬 페이스 마스크</p>
+                      </a>
+                      <div class="price-box">
+                        <p class="price">25,000원</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="prd-box1-right">
+                    <div class="pick-prd-icon">
+                      <a href="#">
+                        <img src="images/jisu/pick/heart_icon.png" alt="heart" />
+                      </a>
+                      <a href="#">
+                        <img src="images/jisu/pick/cart_icon.png" alt="cart" />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="prd-box2">
+                  <div class="prd-box2-left">
+                    <div class="thumbnail">
+                      <a href="#">
+                        <img src="images/jisu/pick/1.프레쉬-제품2(스킨 수딩 포리지).png" alt="스킨 수딩 포리지" />
+                      </a>
+                    </div>
+                    <div class="description">
+                      <a href="#">
+                        <p class="prd-name">스킨 푸딩 포리지</p>
+                        <p class="prd-category">프레쉬 페이스 마스크</p>
+                      </a>
+                      <div class="price-box">
+                        <p class="price">25,000원</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="prd-box2-right">
+                    <div class="pick-prd-icon">
+                      <a href="#">
+                        <img src="images/jisu/pick/heart_icon.png" alt="heart" />
+                      </a>
+                      <a href="#">
+                        <img src="images/jisu/pick/cart_icon.png" alt="cart" />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="pick-prd-bottom">
+                <button class="curation">큐레이션 보러가기</button>
+              </div>
+            </div>
+          </div>
+          <div class="pick-box-care">
+            <div class="pick-banner">
+              <div class="pick-img">
+                <img src="images/jisu/pick/2.보습케어.jpg" alt="보습케어" />
+              </div>
+              <p class="pick-txt">
+                코앞의 겨울, 피부를 지켜줄 <br />
+                촉촉 보습 케어 루틴
+              </p>
+            </div>
+            <div class="pick-products">
+              <div class="pick-prd-top">
+                <div class="prd-box1">
+                  <div class="prd-box1-left">
+                    <div class="thumbnail">
+                      <a href="#">
+                        <img src="images/jisu/pick/2.보습케어-제품1(코스메틱 래드).png" alt="코스메틱 래드" />
+                      </a>
+                    </div>
+                    <div class="description">
+                      <a href="#">
+                        <p class="prd-name">코스메틱 래드</p>
+                        <p class="prd-category">페이셜 모이스 춰라이저</p>
+                      </a>
+                      <div class="price-box">
+                        <p class="price">49,000원</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="prd-box1-right">
+                    <div class="pick-prd-icon">
+                      <a href="#">
+                        <img src="images/jisu/pick/heart_icon.png" alt="heart" />
+                      </a>
+                      <a href="#">
+                        <img src="images/jisu/pick/cart_icon.png" alt="cart" />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="prd-box2">
+                  <div class="prd-box2-left">
+                    <div class="thumbnail">
+                      <a href="#">
+                        <img src="images/jisu/pick/2.보습케어-제품2(렛 더 굿 타임즈 롤).png" alt="렛 더 굿 타임즈 롤" />
+                      </a>
+                    </div>
+                    <div class="description">
+                      <a href="#">
+                        <p class="prd-name">렛 더 굿 타임즈 롤</p>
+                        <p class="prd-category">프레쉬 클렌저</p>
+                      </a>
+                      <div class="price-box">
+                        <p class="price">22,000원</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="prd-box2-right">
+                    <div class="pick-prd-icon">
+                      <a href="#">
+                        <img src="images/jisu/pick/heart_icon.png" alt="heart" />
+                      </a>
+                      <a href="#">
+                        <img src="images/jisu/pick/cart_icon.png" alt="cart" />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="prd-box3">
+                  <div class="prd-box3-left">
+                    <div class="thumbnail">
+                      <a href="#">
+                        <img src="images/jisu/pick/2.보습케어-제품3(오 로마 워터).png" alt="오 로마 워터" />
+                      </a>
+                    </div>
+                    <div class="description">
+                      <a href="#">
+                        <p class="prd-name">오 로마 워터</p>
+                        <p class="prd-category">토너</p>
+                      </a>
+                      <div class="price-box">
+                        <p class="price">16,000원</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="prd-box3-right">
+                    <div class="pick-prd-icon">
+                      <a href="#">
+                        <img src="images/jisu/pick/heart_icon.png" alt="heart" />
+                      </a>
+                      <a href="#">
+                        <img src="images/jisu/pick/cart_icon.png" alt="cart" />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="pick-prd-bottom">
+                <button class="curation">큐레이션 보러가기</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- f_review -->
       <section class="f_review">
         <div class="wrap-inner">
@@ -924,7 +1108,10 @@
                 <div class="review">
                   <div class="review-sub">
                     <div class="review-sub1">
-                      <p>러쉬 클렌저 딴것들도 써봤는데 저한텐 허벌리즘이 제일 맞는것 같아요.정확히 무슨 효관지는 모르겠는데 피부가 개운해지는 느낌이예요ㅋㅋ</p>
+                      <p>
+                        러쉬 클렌저 딴것들도 써봤는데 저한텐 허벌리즘이 제일 맞는것 같아요.정확히 무슨 효관지는
+                        모르겠는데 피부가 개운해지는 느낌이예요ㅋㅋ
+                      </p>
                     </div>
                     <div class="review-sub2">
                       <span class="reviewer">oncl*****</span>
@@ -1022,7 +1209,10 @@
                 <div class="review">
                   <div class="review-sub">
                     <div class="review-sub1">
-                      <p>건조한 피부에 좋다고 해서 로즈잼으로 구매했는데 향이 너무 좋아요 !! 사용감도 좋고 굿 키마랑 비슷한 것 같은데 계속 사용해 보려고요.</p>
+                      <p>
+                        건조한 피부에 좋다고 해서 로즈잼으로 구매했는데 향이 너무 좋아요 !! 사용감도 좋고 굿 키마랑
+                        비슷한 것 같은데 계속 사용해 보려고요.
+                      </p>
                     </div>
 
                     <div class="review-sub2">
