-pick 자바스크립트

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
             <button class="fresh">프레쉬4</button>
             <button class="care">보습케어</button>
           </div>
-          <div class="pick-box-fresh">
+          <div class="pick-box-fresh" id="pickBox">
             <div class="pick-banner">
               <div class="pick-img">
                 <img src="images/jisu/pick/1.프레쉬.jpg" alt="프레쉬4" />
@@ -1003,7 +1003,7 @@
               </div>
             </div>
           </div>
-          <div class="pick-box-care">
+          <div class="pick-box-care" id="pickBox">
             <div class="pick-banner">
               <div class="pick-img">
                 <img src="images/jisu/pick/2.보습케어.jpg" alt="보습케어" />
