--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script src="js/b_visual.js"></script>
     <script src="js/c_best.js"></script>
     <script src="js/d_new.js"></script>
+    <script src="js/e_pick.js"></script>
     <script src="js/f_review.js"></script>
     <script src="js/g_event.js"></script>
     <script src="js/h_service.js"></script>
