코드추가/수정

--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
           <div class="header-left">
             <!-- 햄버거바 메뉴버튼 -->
             <a href="#" class="mb-xi" id="hamburger-menu">
-              <img src="images/jihye/a_header/icon/icon-menu.png" alt="햄버거바 아이콘" width="30" />
+              <img
+                src="images/jihye/a_header/icon/icon-menu.png"
+                alt="햄버거바 아이콘"
+              />
             </a>
             <!--로고  -->
             <a href="#" class="logo">
@@ -103,59 +106,141 @@
             </a>
             <!-- 메뉴 -->
             <nav class="nav">
-              <div class="cartegori">
-                <a href="#">카테고리</a>
-                <ul class="depth">
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_vest.png" alt="베스트" />베스트</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보" />콜라보</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드" />리미티드</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품" />신제품</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_hair.png" alt="헤어" />헤어</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_face.png" alt="페이스" />페이스</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업" />메이크업</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_gift.png" alt="기프트" />기프트</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_bath.png" alt="배쓰" />배쓰</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_shower.png" alt="샤워" />샤워</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_body.png" alt="보디" />보디</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_perfume.png" alt="프래그런스" />프래그런스</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리" />악세서리</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_swag.png" alt="스웨그" />스웨그</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_spa.png" alt="스파" />스파</a>
-                  </li>
-                  <li>
-                    <a href="#"><img src="images/jihye/a_header/gnb/gnb_experience.png" alt="체험" />체험</a>
-                  </li>
-                </ul>
-              </div>
+              <ul class="cartegori">
+                <li>
+                  <a href="#">카테고리</a>
+                  <ul class="depth">
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_vest.png"
+                          alt="베스트"
+                        />베스트</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_collabo.png"
+                          alt="콜라보"
+                        />콜라보</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_limited.png"
+                          alt="리미티드"
+                        />리미티드</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_newproduts.png"
+                          alt="신제품"
+                        />신제품</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_hair.png"
+                          alt="헤어"
+                        />헤어</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_face.png"
+                          alt="페이스"
+                        />페이스</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_makeup.png"
+                          alt="메이크업"
+                        />메이크업</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_gift.png"
+                          alt="기프트"
+                        />기프트</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_bath.png"
+                          alt="배쓰"
+                        />배쓰</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_shower.png"
+                          alt="샤워"
+                        />샤워</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_body.png"
+                          alt="보디"
+                        />보디</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_perfume.png"
+                          alt="프래그런스"
+                        />프래그런스</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_accessory.png"
+                          alt="악세서리"
+                        />악세서리</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_swag.png"
+                          alt="스웨그"
+                        />스웨그</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_spa.png"
+                          alt="스파"
+                        />스파</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><img
+                          src="images/jihye/a_header/gnb/gnb_experience.png"
+                          alt="체험"
+                        />체험</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+              </ul>
               <ul class="gnb">
                 <li>
                   <a href="#">이벤트</a>
@@ -192,104 +277,24 @@
           <!-- 사용자 아이콘 -->
           <ul class="user">
             <li>
-              <a href="#"><img src="images/jihye/a_header/icon/icon-search.png" alt="search" /></a>
+              <a href="#"
+                ><img
+                  src="images/jihye/a_header/icon/icon-search.png"
+                  alt="search"
+              /></a>
             </li>
             <li>
-              <a href="#"><img src="images/jihye/a_header/icon/icon-user.png" alt="user" /></a>
+              <a href="#"
+                ><img src="images/jihye/a_header/icon/icon-user.png" alt="user"
+              /></a>
             </li>
             <li>
-              <a href="#"><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart" /></a>
+              <a href="#"
+                ><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart"
+              /></a>
             </li>
           </ul>
-          <div class="a_header-bg"></div>
-          <!-- 모바일용 메뉴 -->
-          <nav class="mb-nav">
-            <div class="mb-cartegori">
-              <a href="#">카테고리</a>
-              <ul class="mb-depth">
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_vest.png" alt="베스트" />베스트</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보" />콜라보</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드" />리미티드</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품" />신제품</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_hair.png" alt="헤어" />헤어</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_face.png" alt="페이스" />페이스</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업" />메이크업</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_gift.png" alt="기프트" />기프트</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_bath.png" alt="배쓰" />배쓰</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_shower.png" alt="샤워" />샤워</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_body.png" alt="보디" />보디</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_perfume.png" alt="프래그런스" />프래그런스</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리" />악세서리</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_swag.png" alt="스웨그" />스웨그</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_spa.png" alt="스파" />스파</a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_experience.png" alt="체험" />체험</a>
-                </li>
-              </ul>
-            </div>
-            <ul class="mb-gnb">
-              <li>
-                <a href="#">이벤트</a>
-                <ul class="mb-depth2">
-                  <li><a href="#">러쉬 이벤트</a></li>
-                  <li><a href="#">선정자 발표</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">커뮤니티</a>
-                <ul class="mb-depth2">
-                  <li><a href="#">젤러쉬</a></li>
-                  <li><a href="#">에디터픽</a></li>
-                  <li><a href="#">러쉬 타임즈</a></li>
-                  <li><a href="#">리토의 일기장</a></li>
-                  <li><a href="#">다운로드 러쉬</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">러쉬소식</a>
-                <ul class="mb-depth2">
-                  <li><a href="#">러쉬소개</a></li>
-                  <li><a href="#">러쉬 이야기</a></li>
-                  <li><a href="#">채러티팟</a></li>
-                  <li><a href="#">서명 캠페인</a></li>
-                  <li><a href="#">매장안내</a></li>
-                  <li><a href="#">채용공고</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
         </div>
-        <div class="cartegori-bg"></div>
       </header>
       <!-- b_visual slide -->
       <section class="b_visual">
@@ -1424,7 +1429,7 @@
           <div class="footer-left">
             <!-- 로고 -->
             <div class="footer-left-logo">
-              <a href="#"><img src="images/jihye/i-footer/logo 1.png" alt="로고" /></a>
+              <a href="#"><img src="images/jihye/i-footer/logo 1.png" alt="로고" width="70" /></a>
             </div>
             <!-- 주소 1 -->
             <div class="footer-left-1">
@@ -1485,11 +1490,6 @@
           <span class="close-modal" id="closeModal"><img src="images/jihye/modal/modal_icon-x.png" alt="xicon" width="40" /></span>
           <img src="images/jihye/modal/modal_img.png" alt="모달이미지" />
         </div>
-        <script>
-          document.getElementById("closeModal").addEventListener("click", function () {
-            document.getElementById("myModal").style.display = "none";
-          });
-        </script>
       </section>
     </div>
   </body>
