--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="wrap-inner">
           <div class="header-left">
             <!-- 햄버거바 메뉴버튼 -->
-            <a href="#" class="mb-xi" id="hamburger-menu">
+            <a href="#" class="mb-xi" id="hamburger-menu" width="50">
               <img
                 src="images/jihye/a_header/icon/icon-menu.png"
                 alt="햄버거바 아이콘"
