--- a/index.html
+++ b/index.html
@@ -304,9 +304,28 @@
             <!-- 슬라이드1 -->
             <li class="swiper-slide">
               <picture>
-                <source srcset="images/jihye/b_visual slide/s_b_visual slide_1.png" media="(max-width: 767px)" />
-                <source srcset="images/jihye/b_visual slide/m_b_visual slide_1.png" media="(max-width: 1023px)" />
-                <img src="images/jihye/b_visual slide/l_b_visual slide_1.png" alt="유기농" />
+                <img src="images/jihye/b_visual slide/l_b_visual slide_2.png" alt="가족피크닉 1920px" class="visual-de" />
+                <img src="images/jihye/b_visual slide/m_b_visual slide_2.png" alt="가족피크닉 768px " class="visual-ta"/>
+                <img src="images/jihye/b_visual slide/s_b_visual slide_2.png" alt="가족피크닉 390px" class="visual-mb"/>
+              </picture>
+              <div class="wrap-inner">
+                <div class="box-txt">
+                  <h4>소중한 가족과의 순간, 더 특별하게</h4>
+                  <p>가족들과 즐기는 피크닉 속 러쉬 제품</p>
+                  <p>행복한 시간 보내세요.</p>
+                  <a href="#" class="b_visual-btn">살펴보기</a>
+                  <div class="box-txt-wrap">
+                    <img src="images/jihye/b_visual slide/btn_1.png" alt="버튼1" width="80">
+                  </div>
+                </div>
+              </div>
+            </li>
+            <!-- 슬라이드2 -->
+            <li class="swiper-slide">
+              <picture>
+                <img src="images/jihye/b_visual slide/l_b_visual slide_1.png" alt="유기농 1920px" class="visual-de" />
+                <img src="images/jihye/b_visual slide/m_b_visual slide_1.png" alt="유기농 768px " class="visual-ta"/>
+                <img src="images/jihye/b_visual slide/s_b_visual slide_1.png" alt="유기농 390px" class="visual-mb"/>
               </picture>
               <div class="wrap-inner">
                 <div class="box-txt">
@@ -314,47 +333,18 @@
                   <p>러쉬는 자연에서 얻은 유기농 재료로 만듭니다.</p>
                   <p>건강한 아름다움을 경험하세요.</p>
                   <a href="#" class="b_visual-btn">살펴보기</a>
-                </div>
-              </div>
-            </li>
-            <!-- 슬라이드2 -->
-            <li class="swiper-slide">
-              <picture>
-                <source srcset="images/jihye/b_visual slide/s_b_visual slide_2.png" media="(max-width: 767px)" />
-                <source srcset="images/jihye/b_visual slide/m_b_visual slide_2.png" media="(max-width: 1023px)" />
-                <img src="images/jihye/b_visual slide/l_b_visual slide_2.png" alt="가족피크닉" />
-              </picture>
-              <div class="wrap-inner">
-                <div class="box-txt">
-                  <h4>소중한 가족과의 순간, 더 특별하게</h4>
-                  <p>가족들과 즐기는 피크닉 속 러쉬 제품</p>
-                  <p></p>
-                  <a href="#" class="b_visual-btn">살펴보기</a>
+                  <div class="box-txt-wrap">
+                    <img src="images/jihye/b_visual slide/btn_2.png" alt="버튼2" width="80">
+                  </div>
                 </div>
               </div>
             </li>
             <!-- 슬라이드3 -->
             <li class="swiper-slide">
               <picture>
-                <source srcset="images/jihye/b_visual slide/s_b_visual slide_3.png" media="(max-width: 767px)" />
-                <source srcset="images/jihye/b_visual slide/m_b_visual slide_3.png" media="(max-width: 1023px)" />
-                <img src="images/jihye/b_visual slide/l_b_visual slide_3.png" alt="나이트케어" />
-              </picture>
-              <div class="wrap-inner">
-                <div class="box-txt">
-                  <h4>깊은 휴식을 위한 나이트 케어</h4>
-                  <p>하루의 피로를 씻어내고,</p>
-                  <p>편안한 밤을 위한 특별한 스킨케어 루틴.</p>
-                  <a href="#" class="b_visual-btn">살펴보기</a>
-                </div>
-              </div>
-            </li>
-            <!-- 슬라이드4 -->
-            <li class="swiper-slide">
-              <picture>
-                <source srcset="images/jihye/b_visual slide/s_b_visual slide_4.png" media="(max-width: 767px)" />
-                <source srcset="images/jihye/b_visual slide/m_b_visual slide_4.png" media="(max-width: 1023px)" />
-                <img src="images/jihye/b_visual slide/l_b_visual slide_4.png" alt="사랑" />
+                <img src="images/jihye/b_visual slide/l_b_visual slide_3.png" alt="사랑 1920px" class="visual-de" />
+                <img src="images/jihye/b_visual slide/m_b_visual slide_3.png" alt="사랑 768px " class="visual-ta"/>
+                <img src="images/jihye/b_visual slide/s_b_visual slide_3.png" alt="사랑 390px" class="visual-mb"/>
               </picture>
               <div class="wrap-inner">
                 <div class="box-txt">
@@ -362,6 +352,28 @@
                   <p>달콤한 순간을 위한 핑크빛 감성.</p>
                   <p>사랑하는 사람에게 러쉬를 선물하세요.</p>
                   <a href="#" class="b_visual-btn">살펴보기</a>
+                  <div class="box-txt-wrap">
+                    <img src="images/jihye/b_visual slide/btn_3.png" alt="버튼3" width="80">
+                  </div>
+                </div>
+              </div>
+            </li>
+            <!-- 슬라이드4 -->
+            <li class="swiper-slide">
+              <picture>
+                <img src="images/jihye/b_visual slide/l_b_visual slide_4.png" alt="나이트케어 1920px" class="visual-de" />
+                <img src="images/jihye/b_visual slide/m_b_visual slide_4.png" alt="나이트케어 768px " class="visual-ta"/>
+                <img src="images/jihye/b_visual slide/s_b_visual slide_4.png" alt="나이트케어 390px" class="visual-mb"/>
+              </picture>
+              <div class="wrap-inner">
+                <div class="box-txt">
+                  <h4>깊은 휴식을 위한 나이트 케어</h4>
+                  <p>하루의 피로를 씻어내고,</p>
+                  <p>편안한 밤을 위한 특별한 스킨케어 루틴.</p>
+                  <a href="#" class="b_visual-btn">살펴보기</a>
+                  <div class="box-txt-wrap">
+                    <img src="images/jihye/b_visual slide/btn_4.png" alt="버튼4" width="80">
+                  </div>
                 </div>
               </div>
             </li>
