event 영역 반응형중

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <!-- 소셜 미디어에서 공유될 때 사용되는 URL -->
     <meta property="og:url" content="https://numberone-one.vercel.app/" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 이미지 -->
-    <meta property="og:image" content="https://numberone-one.vercel.app/images/jisu/pick/1.%ED%94%84%EB%A0%88%EC%89%AC.jpg" />
+    <meta
+      property="og:image"
+      content="https://numberone-one.vercel.app/images/jisu/pick/1.%ED%94%84%EB%A0%88%EC%89%AC.jpg" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 사용되는 설명 -->
     <meta property="og:description" content="팀 프로젝트 numberone 웹사이트입니다." />
 
@@ -50,7 +52,7 @@
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/variables.css" />
-    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/main.css" />
     <!-- 제이쿼리 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -86,7 +88,13 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PTWVF73K" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PTWVF73K"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"></iframe
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- 전체레이아웃 -->
     <div class="wrap">
@@ -96,10 +104,7 @@
           <div class="header-left">
             <!-- 햄버거바 메뉴버튼 -->
             <a href="#" class="mb-xi" id="hamburger-menu" width="50">
-              <img
-                src="images/jihye/a_header/icon/icon-menu.png"
-                alt="햄버거바 아이콘"
-              />
+              <img src="images/jihye/a_header/icon/icon-menu.png" alt="햄버거바 아이콘" />
             </a>
             <!--로고  -->
             <a href="#" class="logo">
@@ -112,132 +117,52 @@
                   <a href="#">카테고리</a>
                   <ul class="depth">
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_vest.png"
-                          alt="베스트"
-                        />베스트</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_vest.png" alt="베스트" />베스트</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_collabo.png"
-                          alt="콜라보"
-                        />콜라보</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보" />콜라보</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_limited.png"
-                          alt="리미티드"
-                        />리미티드</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드" />리미티드</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_newproduts.png"
-                          alt="신제품"
-                        />신제품</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품" />신제품</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_hair.png"
-                          alt="헤어"
-                        />헤어</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_hair.png" alt="헤어" />헤어</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_face.png"
-                          alt="페이스"
-                        />페이스</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_face.png" alt="페이스" />페이스</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_makeup.png"
-                          alt="메이크업"
-                        />메이크업</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업" />메이크업</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_gift.png"
-                          alt="기프트"
-                        />기프트</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_gift.png" alt="기프트" />기프트</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_bath.png"
-                          alt="배쓰"
-                        />배쓰</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_bath.png" alt="배쓰" />배쓰</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_shower.png"
-                          alt="샤워"
-                        />샤워</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_shower.png" alt="샤워" />샤워</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_body.png"
-                          alt="보디"
-                        />보디</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_body.png" alt="보디" />보디</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_perfume.png"
-                          alt="프래그런스"
-                        />프래그런스</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_perfume.png" alt="프래그런스" />프래그런스</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_accessory.png"
-                          alt="악세서리"
-                        />악세서리</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리" />악세서리</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_swag.png"
-                          alt="스웨그"
-                        />스웨그</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_swag.png" alt="스웨그" />스웨그</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_spa.png"
-                          alt="스파"
-                        />스파</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_spa.png" alt="스파" />스파</a>
                     </li>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="images/jihye/a_header/gnb/gnb_experience.png"
-                          alt="체험"
-                        />체험</a
-                      >
+                      <a href="#"><img src="images/jihye/a_header/gnb/gnb_experience.png" alt="체험" />체험</a>
                     </li>
                   </ul>
                 </li>
@@ -278,21 +203,13 @@
           <!-- 사용자 아이콘 -->
           <ul class="user">
             <li>
-              <a href="#"
-                ><img
-                  src="images/jihye/a_header/icon/icon-search.png"
-                  alt="search"
-              /></a>
+              <a href="#"><img src="images/jihye/a_header/icon/icon-search.png" alt="search" /></a>
             </li>
             <li>
-              <a href="#"
-                ><img src="images/jihye/a_header/icon/icon-user.png" alt="user"
-              /></a>
+              <a href="#"><img src="images/jihye/a_header/icon/icon-user.png" alt="user" /></a>
             </li>
             <li>
-              <a href="#"
-                ><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart"
-              /></a>
+              <a href="#"><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart" /></a>
             </li>
           </ul>
         </div>
@@ -1220,7 +1137,10 @@
                 <div class="review">
                   <div class="review-sub">
                     <div class="review-sub1">
-                      <p>러쉬 클렌저 딴것들도 써봤는데 저한텐 허벌리즘이 제일 맞는것 같아요.정확히 무슨 효관지는 모르겠는데 피부가 개운해지는 느낌이예요ㅋㅋ</p>
+                      <p>
+                        러쉬 클렌저 딴것들도 써봤는데 저한텐 허벌리즘이 제일 맞는것 같아요.정확히 무슨 효관지는
+                        모르겠는데 피부가 개운해지는 느낌이예요ㅋㅋ
+                      </p>
                     </div>
                     <div class="review-sub2">
                       <span class="reviewer">oncl*****</span>
@@ -1318,7 +1238,10 @@
                 <div class="review">
                   <div class="review-sub">
                     <div class="review-sub1">
-                      <p>건조한 피부에 좋다고 해서 로즈잼으로 구매했는데 향이 너무 좋아요 !! 사용감도 좋고 굿 키마랑 비슷한 것 같은데 계속 사용해 보려고요.</p>
+                      <p>
+                        건조한 피부에 좋다고 해서 로즈잼으로 구매했는데 향이 너무 좋아요 !! 사용감도 좋고 굿 키마랑
+                        비슷한 것 같은데 계속 사용해 보려고요.
+                      </p>
                     </div>
 
                     <div class="review-sub2">
@@ -1488,7 +1411,9 @@
       <!-- modal -->
       <section class="modal" id="myModal">
         <div class="modal-content">
-          <span class="close-modal" id="closeModal"><img src="images/jihye/modal/modal_icon-x.png" alt="xicon" width="40" /></span>
+          <span class="close-modal" id="closeModal"
+            ><img src="images/jihye/modal/modal_icon-x.png" alt="xicon" width="40"
+          /></span>
           <img src="images/jihye/modal/modal_img.png" alt="모달이미지" />
         </div>
       </section>
