--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <img src="images/jihye/b_visual slide/m_b_visual slide_2.png" alt="가족피크닉 768px " class="visual-ta"/>
                 <img src="images/jihye/b_visual slide/s_b_visual slide_2.png" alt="가족피크닉 390px" class="visual-mb"/>
               </picture>
-              <div class="wrap-inner">
+              <div class="visual-inner">
                 <div class="box-txt">
                   <h4>소중한 가족과의 순간, 더 특별하게</h4>
                   <p>가족들과 즐기는 피크닉 속 러쉬 제품</p>
